// Vitest Snapshot v1

exports[`<IndexOTU /> > should render when [changeCount = 1] 1`] = `
<Styled(BoxGroupSection)>
  <Link
    to="/refs/foo/otus/bar"
  >
    baz
  </Link>
  <Badge>
    1
     
    change
  </Badge>
</Styled(BoxGroupSection)>
`;

exports[`<IndexOTU /> > should render when [changeCount = 2] 1`] = `
<Styled(BoxGroupSection)>
  <Link
    to="/refs/foo/otus/bar"
  >
    baz
  </Link>
  <Badge>
    2
     
    changes
  </Badge>
</Styled(BoxGroupSection)>
`;
